layout issues

--- a/style.css
+++ b/style.css
@@ -102,6 +102,11 @@ html,body{
     transform: rotate(0deg);
 }
 
+#cta-button, #menu-button{
+    transition: all .3s ease-in-out;
+    cursor: pointer;
+}
+
 #messenger-icon, #whatsapp-icon, #email-icon, #phone-icon{
     font-size: 1.5rem;
 }
@@ -134,7 +139,7 @@ html,body{
     border-radius: 5px;
     /* opacity: 0; */
     transition: all .3s ease-in-out;
-    z-index: 10;
+    z-index: 20;
     opacity: 0;
 }
 
@@ -177,6 +182,7 @@ html,body{
     align-items: center;
     font-size: 1.2rem;
 }
+
 
 
 
@@ -497,7 +503,7 @@ html,body{
     #messenger-icon, #whatsapp-icon, #email-icon{
     display: block;
     font-size: 1rem;
-}
+   }
        .site-header .menu-right{
         /* background-color:yellow; */
         flex-direction: row-reverse;
@@ -510,15 +516,43 @@ html,body{
         height: 100%;   
         /* background-color: blue;  */
         padding: 0;    
+        /* background-color: red; */
     }
 
     .menu-right .cta-block{
         /* border: 1px solid black; */
         justify-content: space-evenly;
         width: 25%;
+        /* background-color: red; */
         /* padding: 1rem; */
-
     }
+
+    .cta-block .ctas-menu{
+        width: 150%;
+        right: 55%;
+    }
+   .cta-block .ctas-menu li a{
+    /* background-color: green; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+   }
+
+   .cta-block .ctas-menu li a i{
+    /* background-color: red; */
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    font-size: 1.8rem;
+   }
+
+   .cta-block .ctas-menu li a p{
+    /* background-color: orange; */
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+   }
 
     .menu-block .main-menu{
         /* width: 150% !important; */
@@ -531,9 +565,10 @@ html,body{
         flex-direction: row;
         justify-content: space-evenly;
         align-items: center;
+        /* background-color: blue; */
         background-color: white;
         border: none;
-        padding: 0 0 0 4rem;
+        /* padding: 0 0 0 2rem; */
         /* background-color: blue; */
         /* background-color: red; */
     }
@@ -542,8 +577,9 @@ html,body{
         border: none;
         height: 10%;
         width: 100%;
-        font-size: 1rem;
+        font-size: .8rem;
         opacity: 1;
+        /* background-color: red; */
         /* border: 1px solid black; */
         /* flex: none; */
     }
